# EORA

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  for_me.md  pyproject.toml  requirements.txt
data/: urls.txt
data/faiss_index/: index.faiss  index.pkl
example_not/data_extraction/: dataset_builder.py
example_not/data_extraction/data_ingestion/: ingestor.py
example_not/data_extraction/rag/: openai_client.py
example_not/data_extraction/rag/pipeline/: chunk_selector.py  nodes.py
scripts/: main.py
src/: config.py  main.py
src/api/: main.py
src/bot/: constants.py  handlers.py  keyboards.py
src/clients/: cli.py  telegram_bot.py
src/core/: config.py  crawler.py  llm_engine.py  search.py
src/llm/: llm_client.py  prompts.py
src/rag/: builder.py  generator.py  retriever.py
src/utils/: helpers.py  logger.py
tg_bot/: bot.py
